headlamp/nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: headlamp-node-port
  namespace: headlamp
spec:
  type: NodePort
  ipFamilyPolicy: PreferDualStack
  ipFamilies:
  - IPv4
  - IPv6
  selector:
    k8s-app: headlamp
  ports:
  - name: http
    port: 80
    targetPort: 4466
    nodePort: 30808
